# phenix_toolchains

./: Readme.md  meson.build
generic/: meson.build
pc/: ethernet_bridge.txt  meson.build
rpi/: connect_to_wifi.txt  rpi_wifi_provider.txt  wifibridge.sh
rpi/swd/: README.md  openocd.cfg  raspberrypi3-native.cfg
rpi/swd/F303REblink/: 200.elf  500.elf
stm32/: meson.build
stm32/flash_targets/: debug_openocd_gdb.sh  meson.build
